Fixed message not showing issue and other bugs

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,6 @@
   justify-content: center;
   width: 100%;
   margin-top: 64px;
-  color:darkkhaki;
-  background-color:beige
 }
 
 .dataContainer {
